--- a/src/main/resources/assets/reskin/lang/ru_ru.json
+++ b/src/main/resources/assets/reskin/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
   "setskin.missingargs": "Вы должны предоставить ссылку на скин.",
   "setskin.clearedcache": "Кеш скинов был очищен. Загружаем необходимые скины...",
-  "setskin.setplayer": "Set %s's skin to %s"
+  "setskin.setplayer": "Скин %s установлен на %s"
 }
