feat: Added /setmodel command & Reworked /setskin
BREAKING CHANGE: Specifically relating to if you have command blocks. targeting other entities with /setskin now is /setskin (url) (targets)

--- a/src/main/resources/assets/reskin/lang/ru_ru.json
+++ b/src/main/resources/assets/reskin/lang/ru_ru.json
@@ -1,4 +1,4 @@
 {
   "setskin.clearedcache": "Кеш скинов был очищен. Загружаем необходимые скины...",
-  "setskin.setplayer": "Скин %s установлен на %s"
+  "setskin.setplayerskin": "Скин %s установлен на %s"
 }
